# padwan-cli

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
commands/batch/: index.html
commands/chat/: index.html
docs/: getting-started.md  index.md
docs/commands/: batch.md  chat.md
docs/stylesheets/: extra.css
getting-started/: index.html
padwan_cli/: __init__.py  __main__.py  chat.py  conversation.py  run.py  utils.py  widgets.py
padwan_cli/batch/: __init__.py  format.py  run.py  utils.py
search/: search_index.json
static/: chat.tape
